# mmap-usage-samples

./: .gitignore  CMakeLists.txt  README.md  line_by_line_reading.c  mmap_reading.c  read_reading.c  readers_writers.h  readers_writers_problem.c  readers_writers_related.c
readers-writers-unrelated/: reader_writer.c  shm_initializer.c  shm_unlinker.c
shell-scripts/: mmap_vs_read_stats.sh  reader_writers_related.sh  readers_writers_problem.sh  readers_writers_unrelated.sh
